--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - /home/pi/Project/html:/var/www/html:ro
+      - /home/pi/Project/Project_Pool_VC01/html:/var/www/html:ro
     restart: unless-stopped
     depends_on:
       - mariadb
@@ -17,7 +17,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - /home/pi/Project/api/main.py:/code/app/main.py:ro
+      - /home/pi/Project/Project_Pool_VC01/api/main.py:/code/app/main.py:ro
     restart: unless-stopped
     depends_on:
       - mariadb
@@ -31,8 +31,8 @@ services:
       MYSQL_USER: monitor
       MYSQL_PASSWORD: monitor
     volumes:
-      - /home/pi/project/db/data:/var/lib/mysql  # Bind mount for database files
-      - /home/pi/project/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro  # Initial SQL script
+      - /home/pi/project/Project_Pool_VC01/db/data:/var/lib/mysql  # Bind mount for database files
+      - /home/pi/project/Project_Pool_VC01/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro  # Initial SQL script
     ports:
       - "3306:3306"
     restart: unless-stopped
