--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - fastapi
 
   fastapi:
-    build: API
+    build: .
     container_name: fastapi
     ports:
       - "8000:8000"
