add email endpoint

--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,6 @@ MYSQL_PASSWORD=monitor
 MYSQL_DATABASE=pool_monitor_vc01
 HOST=192.168.137.42
 PORT=3306
+
+REMINDER_APP_PASSWORD="oawc kpys kjbq rwre"
+REMINDER_EMAIL="zwembad.VC01@gmail.com"
