--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 MYSQL_USER=root
 MYSQL_PASSWORD=1234
 MYSQL_DATABASE=pool_monitor_vc01
-HOST=localhost
+HOST=mariadb
 PORT=3306
 
 REMINDER_APP_PASSWORD="oawc kpys kjbq rwre"
