--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   Webserver:
     image: rtsp/lighttpd
     container_name: lighttpd
+    environment:
+      URL: "fastapi:8000"
     ports:
       - "80:80"
     volumes:
