--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     build: api
     container_name: fastapi
     environment:
+      TZ: "Europe/Brussels"
       MYSQL_USER: root
       MYSQL_PASSWORD: 1234
       MYSQL_DATABASE: pool_monitor_vc01
@@ -26,6 +27,7 @@ services:
       - "8000:8000"
     volumes:
       - /home/pi/Project/Project_Pool_VC01/api/main.py:/code/app/main.py:ro
+      - /home/pi/Project_Logs:/code/app/logfile.log
     restart: unless-stopped
     depends_on:
       - mariadb
